--- a/final_notebooks/2b-landsat-time-series.ipynb
+++ b/final_notebooks/2b-landsat-time-series.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "opposite-prisoner",
+   "id": "african-intellectual",
    "metadata": {},
    "source": [
     "# 2b - Create Landsat 8 time series for McKinley Mine seeding units\n",
@@ -11,8 +11,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "ordinary-savage",
+   "execution_count": 1,
+   "id": "impaired-convertible",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "neither-magnet",
+   "id": "boolean-dealer",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "satisfactory-maintenance",
+   "id": "prospective-mother",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,12 +74,12 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "equivalent-extension",
+   "id": "floating-center",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Set working directory\n",
-    "os.chdir(os.path.join('D:/',\n",
+    "os.chdir(os.path.join('E:/',\n",
     "                      'McKinley'))\n",
     "\n",
     "# Directory to store downloaded Landsat 8 data\n",
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "tender-auction",
+   "id": "prerequisite-portfolio",
    "metadata": {},
    "source": [
     "## Restore seeding unit geodataframe"
@@ -101,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "sudden-liverpool",
+   "id": "yellow-title",
    "metadata": {},
    "outputs": [
     {
@@ -871,7 +871,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "major-climate",
+   "id": "modified-sharing",
    "metadata": {},
    "source": [
     "## Query SentinelHub for available Landsat 8 data"
@@ -880,7 +880,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "seventh-algorithm",
+   "id": "preliminary-memorial",
    "metadata": {},
    "outputs": [
     {
@@ -921,7 +921,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "appreciated-johnston",
+   "id": "recognized-tobacco",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -942,7 +942,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "signal-decline",
+   "id": "loving-default",
    "metadata": {},
    "outputs": [
     {
@@ -1043,7 +1043,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "chinese-slovenia",
+   "id": "ahead-silence",
    "metadata": {},
    "source": [
     "## Download Landsat 8 data and perform zonal stats"
@@ -1052,7 +1052,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "acute-scottish",
+   "id": "discrete-french",
    "metadata": {
     "code_folding": [],
     "scrolled": false
@@ -1655,7 +1655,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "neither-battlefield",
+   "id": "sapphire-sudan",
    "metadata": {},
    "outputs": [
     {
@@ -1668,7 +1668,7 @@
     }
    ],
    "source": [
-    "# Save the data\n",
+    "# Interim save step to remove the need to re-download\n",
     "%store landsat8_stats_all_df\n",
     "%store downloads_list_df\n",
     "# Restore the data\n",
@@ -1677,7 +1677,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "first-thousand",
+   "id": "caroline-canada",
    "metadata": {},
    "source": [
     "## Filter out snow covered dates"
@@ -1685,8 +1685,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "chinese-dressing",
+   "execution_count": 11,
+   "id": "computational-conservative",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1695,7 +1695,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "corporate-shooting",
+   "id": "pleasant-richards",
    "metadata": {},
    "source": [
     "## Plot the results"
@@ -1703,8 +1703,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "eastern-fields",
+   "execution_count": 12,
+   "id": "amateur-voice",
    "metadata": {
     "scrolled": false
    },
@@ -1748,7 +1748,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "supreme-humanity",
+   "id": "ethical-control",
    "metadata": {},
    "source": [
     "## Cleanup"
@@ -1756,8 +1756,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "exceptional-departure",
+   "execution_count": 13,
+   "id": "amazing-plain",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1767,7 +1767,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "sought-element",
+   "id": "miniature-bradley",
    "metadata": {},
    "source": [
     "## Make DF tables consistent between Sentinel 2 and Landsat 8 data"
@@ -1776,7 +1776,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "objective-patent",
+   "id": "minimal-organ",
    "metadata": {},
    "outputs": [
     {
@@ -1918,7 +1918,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "unauthorized-helping",
+   "id": "invisible-screw",
    "metadata": {},
    "source": [
     "## Save the DF for use in subsequent notebooks"
@@ -1927,7 +1927,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "human-wrapping",
+   "id": "possible-jonathan",
    "metadata": {},
    "outputs": [
     {
