--- a/working_notebooks/notes.ipynb
+++ b/working_notebooks/notes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "geological-miniature",
+   "id": "ongoing-manufacturer",
    "metadata": {},
    "source": [
     "# Vegetation Restoration Monitoring - Project Notes"
@@ -10,21 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "illegal-stuff",
-   "metadata": {},
-   "source": [
-    "## Methods\n",
-    "- Import and filter seeding units data\n",
-    "- Extract Landsat and Sentinel 2 time series for each seeding unit\n",
-    "- Perform smoothing, curve fitting of time series data\n",
-    "- Perform unsupervised classification of time series for all SU polygons\n",
-    "- Analysis of seeding unit classes? What do these classes represent? Is there a correlation between seeding unit properties (e.g. seeding start) and classes identified from classification\n",
-    "- Analyse classes with reference to climate/weather data"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "understanding-lying",
+   "id": "armed-cover",
    "metadata": {},
    "source": [
     "## Meeting notes\n",
@@ -57,7 +43,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "static-banana",
+   "id": "hearing-apple",
    "metadata": {},
    "source": [
     "## Tutorials\n",
@@ -71,7 +57,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "spoken-belfast",
+   "id": "compact-chorus",
    "metadata": {},
    "source": [
     "## TODO list\n",
@@ -84,12 +70,12 @@
     "- ~~Add in numbered workflow jupyter notebooks~~\n",
     "- Plots of the seeding unit data\n",
     "- Re-assess how seeding units are being filtered or removed from analysis\n",
-    "- aWhere data access and download"
+    "- ~GEE data access and download~"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "divided-working",
+   "id": "precious-rally",
    "metadata": {},
    "source": [
     "## Past notes\n",
@@ -109,17 +95,21 @@
     "#### Ideas\n",
     "- What is trajectory of different vegetation indices and how do these relate to different vegetation functional types? i.e. shrubs vs grasses?\n",
     "- Is NDVI actually useful? Can it quantify shrubby cover?\n",
+    "  - Mixture model?\n",
     "- Potential statistical analyses:\n",
     "  - 1) Is there a relationship between the general temporal trends in NDVI and when units were seeded/re-seeded?\n",
     "  - 2) What is the trend/slope in NDVI after seeding/reseeding over the short and long term?\n",
     "  - 3) What is the impact of weather/climate variables on the NDVI trends over the short and long term?\n",
     "  - 4) Is there a relationship between acres seeded/re-seeded and weather/climate variables? Was there a hold put on seeding efforts due to drought conditions?\n",
-    "  - 5) Are there seeding units of concern? i.e. are there seeding units where the trend in NDVI is lower than the mean? Are there areas that cross-cut seeding units that are of concern; can we identify pixels with this trend and define new seeding units for future action?"
+    "  - 5) Are there seeding units of concern?\n",
+    "    - Are there seeding units where the trend in NDVI is lower than the mean? \n",
+    "    - Are there areas that cross-cut seeding units that are of concern; can we identify pixels with this trend and define new seeding units for future action?\n",
+    "    - Are there areas with lots of grasses and strong greenup?"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "destroyed-completion",
+   "id": "timely-cedar",
    "metadata": {},
    "source": [
     "## Code snippets"
@@ -128,7 +118,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "flexible-blink",
+   "id": "processed-vocabulary",
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +162,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "rolled-province",
+   "id": "engaged-lesbian",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +172,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "understood-block",
+   "id": "solved-tractor",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +181,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "uniform-gender",
+   "id": "touched-claim",
    "metadata": {},
    "source": [
     "## References\n",
@@ -199,7 +189,11 @@
     "- Analysis of vegetation recovery surrounding a restored wetland using the normalized difference infrared index (NDII) and normalized difference vegetation index (NDVI): https://www.tandfonline.com/doi/full/10.1080/01431161.2018.1437297\n",
     "- Rangeland Productivity Partitioned to Sub-Pixel Plant Functional Types: https://rangelands.app/rap/?biomass_t=herbaceous&ll=38.8633,-110.4298&z=5&landcover_t=pfgc\n",
     "- Innovation in rangeland monitoring: annual, 30 m, plant functional type percent cover maps for U.S. rangelands, 1984–2017: https://esajournals.onlinelibrary.wiley.com/doi/full/10.1002/ecs2.2430\n",
-    "- https://gro-intelligence.com/notebooks/Sao_Paulo_brazil_sugar_content_modeling.html"
+    "- https://gro-intelligence.com/notebooks/Sao_Paulo_brazil_sugar_content_modeling.html\n",
+    "- Moving averages: https://towardsdatascience.com/moving-averages-in-python-16170e20f6c\n",
+    "- Mixture models: https://peerj.com/articles/10747.pdf\n",
+    "- Assessing vegetation recovery in reclaimed opencast mines of the Teruel coalfield (Spain) using Landsat time series and boosted regression trees: https://www.sciencedirect.com/science/article/pii/S0048969720307609?casa_token=B3ceoLYdEk8AAAAA:c1bJkXQveU-6GVcieNgJrVi-Plu6Sy5hjjbPr3n6jc6k2vV8B_cxvKRERqW1Uzhg19VUiGSjKQ#f0050\n",
+    "- https://support.rangelands.app/article/48-vegetation-cover-model"
    ]
   }
  ],
