Final submission cleanup

--- a/notebooks/6-plotting.ipynb
+++ b/notebooks/6-plotting.ipynb
@@ -2,16 +2,16 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "certified-footwear",
+   "id": "seven-wagner",
    "metadata": {},
    "source": [
-    "# 6 - Reporting\n",
+    "# 6 - Plotting\n",
     "This notebook is used to plot a variety of results"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "exact-alabama",
+   "id": "confused-eclipse",
    "metadata": {},
    "source": [
     "## Setup"
@@ -20,7 +20,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "civilian-mention",
+   "id": "stopped-planet",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "exposed-synthesis",
+   "id": "ordinary-story",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "junior-hundred",
+   "id": "cheap-librarian",
    "metadata": {},
    "source": [
     "## Restore datasets"
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "awful-february",
+   "id": "potential-glucose",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "nasty-investing",
+   "id": "professional-slovakia",
    "metadata": {},
    "source": [
     "## Create plots"
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "sized-requirement",
+   "id": "talented-weekly",
    "metadata": {},
    "source": [
     "### Plot 1 - Annual precipitation"
@@ -102,7 +102,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "immediate-perception",
+   "id": "caring-johnson",
    "metadata": {
     "code_folding": []
    },
@@ -1338,7 +1338,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "silent-square",
+   "id": "caring-celtic",
    "metadata": {},
    "source": [
     "### Plot 2 - Annual NDVI vs precipitation for the different seeding units"
@@ -1347,7 +1347,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "hearing-journey",
+   "id": "related-scholar",
    "metadata": {
     "code_folding": []
    },
@@ -3982,7 +3982,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "parental-allergy",
+   "id": "union-conversation",
    "metadata": {},
    "source": [
     "### Plot 3 - Annual NDVI change vs year for the seeding units"
@@ -3991,7 +3991,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "acquired-gamma",
+   "id": "unique-horse",
    "metadata": {},
    "outputs": [
     {
@@ -6624,7 +6624,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "greek-kingston",
+   "id": "improved-economy",
    "metadata": {},
    "source": [
     "### Plot 4 - Annual NDVI change vs intervention year for the seeding units"
@@ -6633,7 +6633,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "adapted-childhood",
+   "id": "affecting-convergence",
    "metadata": {
     "scrolled": false
    },
@@ -9072,7 +9072,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "conventional-resort",
+   "id": "strategic-chick",
    "metadata": {},
    "source": [
     "### Plot 5 - Mean annual NDVI vs intervention year for the seeding units"
@@ -9081,7 +9081,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "voluntary-immigration",
+   "id": "august-study",
    "metadata": {
     "scrolled": false
    },
@@ -11520,7 +11520,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "virtual-savannah",
+   "id": "serial-stuart",
    "metadata": {},
    "source": [
     "### Plot 6 - NDVI anomaly vs intervention year for the seeding units"
@@ -11529,7 +11529,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "anticipated-violence",
+   "id": "graphic-baseline",
    "metadata": {
     "scrolled": false
    },
@@ -14933,7 +14933,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "possible-socket",
+   "id": "framed-visitor",
    "metadata": {},
    "source": [
     "### Plot 7 - NDVI anomaly vs annual precipitation for the seeding units"
@@ -14942,7 +14942,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "invisible-hundred",
+   "id": "dying-fluid",
    "metadata": {
     "scrolled": false
    },
@@ -17432,7 +17432,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "satisfied-advancement",
+   "id": "amended-kansas",
    "metadata": {},
    "outputs": [
     {
@@ -17551,7 +17551,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "completed-trash",
+   "id": "consolidated-proportion",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17560,7 +17560,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "arbitrary-nevada",
+   "id": "guilty-vancouver",
    "metadata": {},
    "source": [
     "### Plot of annual NDVI change vs precipitation for all seeding units for a specific intervention year"
@@ -17569,7 +17569,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "popular-selling",
+   "id": "public-triangle",
    "metadata": {
     "scrolled": false
    },
